fix: responsiveness on smaller screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@ iframe{
         width: 300px;
     }
 }
-@media screen and (max-width: 520px){
+@media screen and (max-width: 550px){
     li{
      margin-right: 20px;   
     }
